<resources>
    <string name="app_name">Locapp</string>
    <string name="app_subtitle">Location entre particuliers</string>
    <string name="myAccount">Mon compte</string>
    <string name="myItems">Mes annonces</string>
    <string name="settings">Paramètres</string>
    <string name="addItem">Ajouter une annonce</string>
    <string name="myInformations">Mes informations</string>
    <string name="summary">Récapitulatif</string>

    <string name="pay">Payer</string>

    <string name="accept">Accepter</string>
    <string name="denied">Refuser</string>

    <string name="postRentalOk">Le demande de réservation a bien été effectuée. Nous vous informerons de la réponse du propriétaire. Pour que la réservation soit effective, vous devez avoir effectué le paiement avant la date de début</string>
    <string name="comments">Commentaires</string>

    <string name="agree">D\'accord</string>

    <string name="register">Inscription</string>
    <string name="login">Se connecter</string>
    <string name="connection">Connexion</string>
    <string name="logout">Se déconnecter</string>

    <string name="name">Nom</string>
    <string name="firstName">Prénom</string>
    <string name="mail">Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="street">Nom de rue</string>
    <string name="box">Boite</string>
    <string name="city">Ville</string>
    <string name="zipCode">Code postal</string>
    <string name="phone">Numéro de téléphone</string>

    <string name="description">Description</string>
    <string name="title">Titre</string>
    <string name="dailyPrice">Prix journalier</string>
    <string name="addPicture">Ajouter une image</string>
    <string name="publish">Publier</string>
    <string name="selectDate">Sélectionner une date</string>
    <string name="selectTime">Sélectionner une heure</string>
    <string name="sectionDateFrom">Date de départ</string>
    <string name="sectionDateTo">Date de fin</string>
    <string name="bookItemButton">Demander une réservation</string>
    <string name="myitems">Mes annonces</string>
    <string name="titleSpinnerLocalities">Sélectionner une localité</string>
    <string name="validate">Valider</string>
    <string name="myRentals">Mes locations</string>
    <string name="myValidations">Mes validations</string>
    <string name="hidden">Invisible</string>
    <string name="avis">avis</string>
    <string name="deleteItem">Supprimer</string>
    <string name="exceptionApi">Erreur avec l\'API</string>
    <string name="signOutButton">Se déconnecter</string>
    <string name="signOutToast">Vous êtes déconnecté</string>
    <string name="Search">Rechercher</string>
    <string name="displayAllItems">Afficher tout</string>


    <string name="welcome">Bienvenu sur l\'application Locapp !</string>
    <string name="welcomeStart">Connectez-vous ou inscrivez-vous pour commencer.</string>



    <string name="BADREQUEST">La rêquete est éronnée.</string>
    <string name="UNAUTHORIZED">Vous devez vous connecter.</string>
    <string name="NOTFOUND">La ressource n\'existe pas.</string>
    <string name="NOTALLOWED">La ressource n\'est pas allouée.</string>
    <string name="TIMEOUT">La rêquete a pris trop de temps.</string>
    <string name="INTERNALSERVERERROR">Une erreur avec le serveur s\'est produite.</string>
    <string name="NETWORKFAIL">L\'appareil n\'est pas connecté à internet.</string>
    <string name="OTHERERROR">Une erreur inconnue s\'est produite.</string>
    <string name="SERVICEUNAVAILABLE">Service indisponible</string>

    <string name="missImage">Il faut obligatoireement ajouter une image</string>

    <string name="updateItemOk">L\'item a bien été mis à jour</string>
    <string name="deleteItemOk">L\'item a bien été supprimé</string>
    <string name="postPersonOk">Votre compte a bien été crée</string>
    <string name="updatePersonOk">Vos données ont bien été modifiées</string>
    <string name="loginFail">Votre login/mdp n\'est pas valide.</string>
    <string name="confirmRental">Réservation confirmée !</string>
    <string name="postItemOk">Objet ajouté !</string>
    <string name="empty">Liste vide!</string>

    <string name="personNotFound">Aucun compte n\'existe avec cette adresse e-mail</string>
    <string name="inccorectPassword">Mot de passe incorrect</string>


    <string name="note">a donné la note de</string>
    <string name="book">Demander une réservation</string>

    <string name="askForBooking">Demande une réservation</string>
    <string name="totalPrice">Prix total</string>

    <string name="update">Modifier</string>
    <string name="isVisible">Est visible</string>
    <string name="changeInfos">Changer les informations personnelles</string>
    <string name="changeAvailibilityDescription">Changer ses disponibilités générales</string>


    <!-- Profile -->

    <string name="rentalsOwner">Mes annonces</string>
    <string name="profilsInfos">Mes informations personnelles</string>
    <string name="historic">Historique des locations</string>
    <string name="followingItems">Suivi des locations</string>
    <string name="inProgress">En cours</string>

    <string name="noFavorites">Aucune annonce ajoutée dans les favoris</string>
    <string name="noRentalsInProgress">Aucune location n\'est en cours</string>
    <string name="noRentalsPlanned">Aucune location n\'est planifiée</string>
    <string name="noRentalsPaid">Aucune location n\'est en attente de paiement</string>
    <string name="noRentalsWaitingForValidation">Aucune demande de location en attente</string>

    <string name="start">Début</string>
    <string name="end">Fin</string>

    <string name="planned">Planifiées</string>
    <string name="waitingForValidation">En attente d\'acceptation</string>
    <string name="waitingForPayment">En attente de paiement</string>

    <string name="giveMark">Donner une note</string>
    <string name="mark">Note sur 5*</string>
    <string name="comment">Commentaire</string>

    <string name="rentalsRenter">Mes locations</string>

    <!-- Menu -->

    <string name="registered">Favoris</string>
    <string name="messages">Messages</string>
    <string name="home">Accueil</string>
    <string name="profile">Profil</string>
    <string name="account">Mon compte</string>
    <string name="owner">Propriétaire</string>
    <string name="renter">Locataire</string>
    <string name="myEvaluations">Mes évaluations</string>

    <!-- Erreurs -->
    <string name="nameException">Le nom est obligatoire et doit contenir maximum 50 caractères</string>
    <string name="firstNameException">Le prénom est obligatoire et doit contenir maximum 50 caractères</string>
    <string name="descriptionException">La description est obligatoire et ne peut pas contenir plus de 255 caractères</string>
    <string name="notARealException">Le prix doit être un nombre entier positif</string>
    <string name="emailException">L\'adresse email n\'a pas été introduite ou n\'a pas un format valide</string>
    <string name="passwordException">Le mot de passe doit contenir au moins 6 caractères/chiffres</string>
    <string name="streetNameException">Le nom de la rue est obligatoire et doit contenir maximum 100 caractères</string>
    <string name="boxException">Le numéro de boite ne peut pas contenir plus de 5 caractères</string>
    <string name="streetNumberException">Le numéro de rue n\'a pas été introduit ou n\'est pas valide</string>
    <string name="phoneNumberException">Le numéro de téléphone n\'est pas valide</string>
    <string name="loginProblem">Cette combinaison login/mot de passe n\'existe pas></string>
    <string name="loginSucceed">Connexion réussie</string>
    <string name="errorRegisterFormTitle">Problème lors de l\'inscription</string>
    <string name="imageException">Il faut obligatoirement ajouter une image</string>
    <string name="itemNameException">Le nom de l\'item est obligatoire et doit comporter maximum 100 caractères</string>
    <string name="errorAddItem">Erreur lors de l\'ajout de l\'item</string>
    <string name="title_activity_maps">Map</string>


    <string name="emailAlreadyExists">L\'adresse email est déjà utilisée</string>

    <string name="userDoesntExist">Aucun</string>

    <string name="noAccountWithThisEmail">Aucun compte avec cette adresse e-mail"</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
