<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Spinner
        android:id="@+id/updateCategorySpinner"
        style="@style/spinner"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/updateItemName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateCategorySpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/title"
        android:inputType="text"/>

    <EditText
        android:id="@+id/updateItemDescription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:minLines="6"
        android:lines="8"
        android:layout_below="@+id/updateItemName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"/>

    <EditText
        android:id="@+id/updatePrice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateItemDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/dailyPrice"
        android:inputType="text"/>

    <CheckBox
        android:id="@+id/updateIsVisible"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/isVisible"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/updatePrice"
        android:buttonTint="@color/blue"/>

    <Button
        android:id="@+id/updateItem"
        style="@style/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateIsVisible"
        android:layout_marginTop="10dp"
        android:text="@string/update"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/deleteItemButton"
        style="@style/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateItem"
        android:layout_marginTop="10dp"
        android:text="@string/deleteItem"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>