<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/nameTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categorySpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/title"
        android:inputType="text"/>

    <EditText
        android:id="@+id/descriptionTextView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/nameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        android:inputType="text"/>

    <EditText
        android:id="@+id/priceTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/dailyPrice"
        android:inputType="text"/>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceTextView"
        android:layout_marginTop="10dp"
        android:text="@string/publish"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>