<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/app_name"
        android:elevation="5dp"
        android:titleTextColor="@color/white"
        android:background="@color/anthracite">
    </Toolbar>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="Bienvenu ! "/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcomeText">
        <Button
            android:id="@+id/regisration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_margin="20dp">
        </Button>

        <Button
            android:id="@+id/connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/regisration"
            android:text="@string/connection"
            android:layout_margin="20dp">
        </Button>

    </RelativeLayout>

</RelativeLayout>