<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/loginFormTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection"
            android:layout_centerHorizontal="true">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            app:endIconMode="clear_text"
            android:inputType="text"
            app:errorEnabled="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/loginFormTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="clear_text"
            android:inputType="text"
            app:errorEnabled="true"
            android:layout_below="@+id/mailInput"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/logInButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordInput"
        android:text="@string/login"
        style="@style/button"/>
    </RelativeLayout>


</RelativeLayout>